correct some alignment to navbar animation

--- a/style.css
+++ b/style.css
@@ -1337,11 +1337,31 @@ body {
         gap: 1.5px
     } */
 
+    #nav{
+        display: flex;
+        padding: 20px;
+        display: flex;
+        justify-items: center;
+     
+    }
+      #nav p{
+        display: none;
+      
+     
+    }
+
     #nav #logo img {
         width: 10vw;
         padding: 0px 1px;
         display: block;
 
+    }
+
+    #nav #navContact {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 60%;
     }
 
     .navmenu {
@@ -1359,6 +1379,7 @@ body {
         height: 10vw;
         /* background: #008080; */
         box-shadow: 1px 2px 10px 2px white;
+        margin-right: 5px;
 
     }
 
